# XDCgen

./: .clang-format  .gitignore  CMakeLists.txt  Pinmap.h  README.md  XDCgen.cpp  XDCgen.h  io.csv  io_allocation_hm2.csv  main.cpp  output.xdc  snickerdoodle_pinmap.xdc
.github/workflows/: continuous-integration.yaml
include/: Pinmap.h  XDCgen.h
src/: XDCgen.cpp  main.cpp
